# research

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.backend  README.md  config.py  docker-compose.yml  langgraph.json  main.py  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Dashboard.tsx  DomainChipInput.tsx  ErrorBanner.tsx  FinalReportPanel.test.tsx  FinalReportPanel.tsx  MarkdownRenderer.tsx  Message.tsx  MessageList.tsx  ResearchForm.tsx  RunStatus.tsx  SubagentCard.tsx  TodoPanel.tsx
frontend/src/hooks/: useResearchStream.test.ts  useResearchStream.ts
frontend/src/store/: researchStore.test.ts  researchStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: reportExport.ts
src/backend/: api.py
src/backend/vanguard/: __init__.py  contracts.py  langgraph_configuration.py  prompts.py
src/frontend/: package-lock.json  package.json  vite.config.ts
src/frontend/src/: index.css
src/vanguard/: __init__.py  api.py  brief.py  contracts.py  graph.py  langgraph_configuration.py  planning.py  prompts.py  report.py  research.py  search_gateway.py  state.py
src/vanguard/report_generation/: __init__.py  bundle.py  models.py  node.py  prompts.py  rendering.py  source_policy.py  writer.py
src/vanguard/research/: __init__.py  agent.py  defaults.py  evidence.py  models.py  node.py  policy.py  prompts.py  recorder.py  search_gateway.py  search_gateway_models.py  tools.py
src/vanguard/review/: __init__.py  defaults.py  (+5 more)
tests/: test_api.py  test_graph.py  test_search_gateway.py
(+40 files in other folders)
