[project]
name = "vanguard-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.18",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
]

[tool.vanguard]
small_model="gpt-5.4-mini"
large_model="gpt-5.5"
openai_base_url="https://cop-deep-research.services.ai.azure.com/openai/v1"
