[project]
name = "vanguard-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.9",
    "exa-py>=2.12.1",
    "fastapi[standard]>=0.124.0",
    "langchain>=1.2.18",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.24",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.vanguard]
# TODO: Move to settings
small_model="gpt-5.4-mini"
large_model="gpt-5.5"
openai_base_url="https://cop-deep-research.services.ai.azure.com/openai/v1"
